# dummy_study

./: README.md  dummy_ref.drawio
3d-model/: 42motor-bracket-bot.stl  README.md  base.stl  motor-35-bot.stl  motor-35-top.stl  motor-42-top.stl
firmware/: README.md
firmware/dummy-35motor-fw/UserApp/: configurations.h  main.cpp
firmware/dummy-42motor-fw/UserApp/: main.cpp
firmware/dummy-ref-core-fw/UserApp/: common_inc.h  main.cpp
hardware/: Port.SchDoc  Power.SchDoc  README.md
hardware/motor42/: MCU.SchDoc  Motor-42.PcbDoc  Motor-42.xlsx
motor-bldc/: README.md
motor-bldc/3d-model/: bldc-bracket.stl
motor-bldc/hardware/: Motor-BLDC.SchDoc
ros2/: README.md
ros2/dummy_ws/src/dummy_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2/dummy_ws/src/dummy_moveit_config/config/: dummy-ros2.ros2_control.xacro  dummy-ros2.srdf  dummy-ros2.urdf.xacro  dummy_simulated_config.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_empty.rviz  ros2_controllers.yaml
ros2/dummy_ws/src/dummy_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo_cpp_interface_demo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2/dummy_ws/src/dummy_moveit_config/src/: servo_cpp_interface_demo.cpp  servo_keyboard_input.cpp
tool/: 99-dummyusb.rules
tool/CLI-Tool/: fan_run.py  init_fan.py  run_fan.py  run_shell.py  tty.md  tty2.md
tool/CLI-Tool/ref_tool/: shell.py
(+29 files in other folders)
